--- a/draft-augustyn-intarea-ipref-framework-00.html
+++ b/draft-augustyn-intarea-ipref-framework-00.html
@@ -36,7 +36,7 @@
     wcwidth 0.2.6
     weasyprint 57.2
 -->
-<link href="/usr/src/app/tmp/2a71b6ba-ee65-4448-ba91-33f9f9081e01/draft-augustyn-intarea-ipref-framework-00.xml" rel="alternate" type="application/rfc+xml">
+<link href="/usr/src/app/tmp/ea08acbc-b887-4945-be73-eb9920966b77/draft-augustyn-intarea-ipref-framework-00.xml" rel="alternate" type="application/rfc+xml">
 <link href="#copyright" rel="license">
 <style type="text/css">/*
 
@@ -1402,10 +1402,10 @@ li > p:last-of-type:only-child {
 <a href="#section-1" class="section-number selfRef">1. </a><a href="#name-introduction" class="section-name selfRef">Introduction</a>
       </h2>
 <p id="section-1-1">Normally, hosts on private networks are only reachable by other hosts on the same private networks. To
-         make them visible to other hosts, NAT is used to make them appear as if residing directly on the public
-         Internet. In most cases, only selected services, determined by their layer 4 port numbers, are made
-         available through this method. Thanks to port mapping, services from different private hosts may be
-         visible with a use of a single public address.<a href="#section-1-1" class="pilcrow">¶</a></p>
+         make them visible to other hosts, techniques like NAT, popular with IPv4 private networks, or filtering,
+         more likely found with IPv6 private networks, are used to make them appear on the public Internet. In most
+         cases, only selected services, determined by their layer 4 port numbers, are made available through these
+         methods. Services from different private hosts may share a single public address.<a href="#section-1-1" class="pilcrow">¶</a></p>
 <p id="section-1-2">This document describes a different way of accessing hosts on private networks. It is done by enhancing
          capabilities of existing layer 3 protocols. The enhancement provides for addressing with references where
          the source and destination is specified by means of references rather than concrete addresses. The respective
@@ -1557,7 +1557,7 @@ li > p:last-of-type:only-child {
           realizes the destination is an <em>encoded</em> address. It finds that the address corresponds to an IPREF address
           198.51.100.22+400. It places this IPREF address in the packet as the new destination address. It also finds that
           the source address 172.17.1.75 does not correspond to any IPREF address so it allocates one through some algorithm,
-          perhaps randomly, as 198.51.100.11+50. It places this IPREF address in the packet as the new source address. It then
+          perhaps randomly, as 198.51.100.11+500. It places this IPREF address in the packet as the new source address. It then
           sends the packet into the <em>third</em> network. This is the common network, the Internet, that both local networks
           A and B connect to. In step (3) the packet arrives at gateway GWB. The gateway recognizes the destination IPREF address
           as representation of the internal host's B address 172.18.2.64. It places this address in the packet as new destination
@@ -1573,7 +1573,7 @@ li > p:last-of-type:only-child {
   Host B4 has IPREF address: 198.51.100.22+400
           encoded at GWA as: 10.128.0.40
 
-  Host A5 is allocated IPREF address: 198.51.100.11+50
+  Host A5 is allocated IPREF address: 198.51.100.11+500
                    encoded at GWB as: 10.192.0.70
 
   Sending a packet from A5 to B4 and receiving a response back at A5:
@@ -1582,7 +1582,7 @@ li > p:last-of-type:only-child {
   1 A5:  │    172.17.1.75    │    10.128.0.40    │ payload │
          └───────────────────┴───────────────────┴─────────┘
          ┌───────────────────┬───────────────────┬─────────┐
-  2 GWA: │ 198.51.100.11+50  │ 198.51.100.22+400 │ payload │
+  2 GWA: │ 198.51.100.11+500 │ 198.51.100.22+400 │ payload │
          └───────────────────┴───────────────────┴─────────┘
                           ┌───────────────────┬───────────────────┬─────────┐
   3                  GWB: │    10.192.0.70    │    172.18.2.64    │ payload │
@@ -1595,7 +1595,7 @@ li > p:last-of-type:only-child {
   5                  B4:  │    172.18.2.64    │    10.192.0.70    │ payload │
                           └───────────────────┴───────────────────┴─────────┘
                           ┌───────────────────┬───────────────────┬─────────┐
-  6                  GWB: │ 198.51.100.22+400 │ 198.51.100.11+50  │ payload │
+  6                  GWB: │ 198.51.100.22+400 │ 198.51.100.11+500 │ payload │
                           └───────────────────┴───────────────────┴─────────┘
          ┌───────────────────┬───────────────────┬─────────┐
   7 GWA: │    10.128.0.40    │    172.17.1.75    │ payload │
@@ -1612,7 +1612,7 @@ li > p:last-of-type:only-child {
 </div>
 <p id="section-2.2-7">In step (5), host B4 sends a response back to host A5. I reverses source and destination addresses and sends a
           packet to gateway GWB. In step (6), the packet arrives at gateway GWB. The gateway recognizes the destination address
-          as an <em>encoded</em> address previously created to represent IPREF address 198.51.100.11+50. It places this IPREF
+          as an <em>encoded</em> address previously created to represent IPREF address 198.51.100.11+500. It places this IPREF
           address in the packet as the new destination address. The gateway also recognizes the source address as corresponding
           to a preset IPREF address 198.51.100.22+400. It places this IPREF address as the new source address. It then sends
           the packet to the <em>third</em> network. In step (7), the packet arrives at gateway GWA. The gateway recognizes the
